--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <body>
-This is my placeholder website, Checkout https://www.aeg0n.itch.io for more games made by me
+This is my placeholder website, Checkout <a>https://www.aeg0n.itch.io</a> for more games made by me
 </body>
 
 </html>
